# noxssh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh
.github/workflows/: build.yml  release-on-tag.yml
client/: CMakeLists.txt  main.c  version.h
common/: noxssh_common.c  noxssh_common.h  noxssh_common_config.h  noxssh_server.c  noxssh_server.h
docs/: SERVER_EMBEDDED.md
scripts/: ci_smoke_sshd.ps1  ci_smoke_sshd.sh
server/: CMakeLists.txt  daemon_runtime.c  daemon_runtime.h  embedded_adapter.h  main.c
tests/: CMakeLists.txt  test_server_init.c
